game.html, index.html, styles.html:   tinkering with html and css to make it look nicer on mobile graphics.ts:   removed offsets on whole_bard_w/whole_board_l to make it centre on mobile app.ts:   fixed // not being added to join url

--- a/public/styles.css
+++ b/public/styles.css
@@ -7,6 +7,62 @@ h1 {
   
 }
 
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  line-height: 1.6;
+  font-size: 22px;
+  color: rgb(36, 36, 36);
+  padding: 0 10px;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* MODAL STUFF */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 86%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  font-size: 16px;
+}
+
+/* BODY STUFF: EVERYTHING HERE INHERITS FROM FAKEBODY*/
+.fakeBody{
+  margin: 40px auto;
+  max-width: 650px;
+  line-height: 1.6;
+  font-size: 22px;
+  color: rgb(36, 36, 36);
+  padding: 0 10px;
+}
+
 .frontPageText {
   width: 600px
 }
@@ -19,7 +75,7 @@ h1 {
 }
 
 .mainButtons {
-  font-size: 1em;
+  font-size: 20px;
   width: 120px;
   margin-right: 10px;
   margin-left: 10px;
@@ -42,48 +98,4 @@ h1 {
   display: none;
 }
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 44%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.fakeBody{
-  margin: 40px auto;
-  max-width: 650px;
-  line-height: 1.6;
-  font-size: 18px;
-  color: rgb(36, 36, 36);
-  padding: 0 10px;
-}
